--- a/styles/style.css
+++ b/styles/style.css
@@ -517,7 +517,7 @@ body {
 }
 
 .project-img {
-  width: 100%;
+  max-width: 100%;
 }
 
 /*************************/
